[package]
name = "dev-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = "0.7.0"
bs58 = "0.4.0"
serde = "1.0.127"
env_logger = "0.9.0"
serde_json = "1.0.66"
shellexpand = "2.1.0"
ed25519-dalek = "1.0.1"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

near-crypto = "0.14.0"
near-primitives = "0.14.0"
near-chain-configs = "0.14.0"
near-jsonrpc-primitives = "0.14.0"
near-jsonrpc-client = "0.2.0"